# rust-library

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  waypoint.hcl
.github/workflows/: rust.yml
k8s/: deployment.yaml  deployment.yml  secrets.yml
migrations/: V1__initial.sql
src/: handlers.rs  main.rs  models.rs
