[package]
name = "rust-library"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1.0.0"
futures = "0.3"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
refinery = { version = "0.6", features = ["tokio-postgres"]}
tokio-postgres = "0.7.2"
tokio = { version = "1.10.0", features = ["full"] }
r2d2_postgres = "0.18.1"

[dev-dependencies]
actix-rt = "1"