[package]
name = "rust-library"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["rustls"] }
actix-service = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3"
env_logger = "0.8"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
refinery = { version = "0.6", features = ["tokio-postgres"] }
tokio-postgres = { version = "0.7.2", features = ["with-chrono-0_4"] }
tokio = { version = "1.10.0", features = ["full"] }
r2d2_postgres = "0.18.1"
dotenv = "0.15.0"

[dev-dependencies]
actix-rt = "1"